# vk_gltf_renderer

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  main.cpp  resource.rc  scene.cpp  scene.hpp  skydome.cpp  skydome.hpp  slangdconfig.json  test.py  tiny_gltf.cpp  vkalloc.hpp
.github/workflows/: build.yml
cmake/: FindNvproCore2.cmake  FindSlang.cmake  draco.cmake  ngx.cmake  slang.cmake
common/: element_nvml.hpp  nvml_monitor.hpp
doc/: png_to_h.py
docs/: RENDERING_ARCHITECTURE.md  app_icon_png.h  benchmarking.md  denoising.md  developer.md  external_assets.md  resources.md  user-guide.md
gltf_viewer/: CMakeLists.txt  README.md
gltf_viewer/shaders/: device_host.h  dh_bindings.h  get_hit.glsl  hit_state.h  pathtrace.rahit  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  payload.glsl  raster.frag  raster.vert  raster_overlay.frag
gltf_viewer/src/: busy_window.hpp  gltf_viewer.cpp  gltf_viewer.hpp  main.cpp  tinygltf_impl.cpp
resources/: Box.glb  shader_ball.gltf
shaders/: animation_io.h.slang  common.h.slang  denoise.comp.glsl  device_host.h  dh_bindings.h  dlss_util.h  frag_shader.frag  functions.glsl  get_hit.h  get_hit.h.slang  gizmo_grid.slang  gizmo_grid_shaderio.h.slang  gizmo_visuals.slang  gizmo_visuals_shaderio.h.slang  gltf.glsl  gltf_eval_config.h  gltf_material_config.h  gltf_material_eval.h.slang  gltf_pathtrace.slang  gltf_raster.slang  gltf_scene_io.h.slang  gltf_vertex_access.h.slang  hit_state.h  integrate_brdf.frag  integrate_brdf.vert  metallic-roughness.frag  morph.comp.slang  optix_image_to_buffer.slang  pathtrace.comp.glsl  pathtrace.rahit.glsl  pathtrace.rchit.glsl  pathtrace.rgen.glsl  pathtrace.rmiss.glsl  pathtrace_functions.h.slang  payload.h  prefilter_diffuse.frag  prefilter_glossy.frag  raster.frag.glsl  raster.vert.glsl  raytracer_interface.h.slang  (+21 more)
src/: alloc_dma.h  animation_control.hpp  atrous_denoiser.hpp  benchmarking.cpp  benchmarking.hpp  busy_window.hpp  collapsing_header_manager.h  compact_model.cpp  compact_model.hpp  create_tangent.cpp  create_tangent.hpp  dlss.cpp  dlss.hpp  dlss_denoiser.cpp  dlss_denoiser.hpp  dlss_wrapper.cpp  dlss_wrapper.hpp  gizmo_grid_vk.cpp  gizmo_grid_vk.hpp  gizmo_transform_vk.cpp  gizmo_transform_vk.hpp  gizmo_visuals_vk.cpp  gizmo_visuals_vk.hpp  gltf_animation_pointer.cpp  gltf_animation_pointer.hpp  gltf_camera_utils.hpp  gltf_compact_model.cpp  gltf_compact_model.hpp  gltf_compact_scene.cpp  gltf_create_tangent.cpp  gltf_create_tangent.hpp  gltf_image_loader.cpp  gltf_image_loader.hpp  gltf_material_cache.cpp  gltf_material_cache.hpp  gltf_scene.cpp  gltf_scene.hpp  gltf_scene_animation.cpp  gltf_scene_animation.hpp  gltf_scene_animation_vk.cpp  (+92 more)
tests/: CMakeLists.txt  README.md  benchmark_main.cpp  test_animation_and_validation.cpp  test_animation_update.cpp  test_basic.cpp  test_basic_editing.cpp  test_children_order_preservation.cpp  test_compute_animation.cpp  test_dirty_flags_and_render_nodes.cpp  test_error_paths.cpp  test_extensions_metadata.cpp  test_features_preserved.cpp  test_index_remapping_advanced.cpp  test_index_remapping_basic.cpp  test_main.cpp  test_material_cache.cpp  test_model_primary.cpp  test_node_hierarchy_operations.cpp  test_primitives.cpp  test_roundtrip.cpp
tests/common/: test_utils.cpp  test_utils.hpp
utils/: 3dscene-to-gltf.py  gltf-ktx2-converter.py  gltf-material-modifier.py
utils/benchmark/: README.md  benchmark.py  benchmark_paths.py  benchmark_results.py  benchmark_runner.py  matrix.cfg  quick.cfg  scenes.example.txt
utils/benchmark/tests/: test_benchmark_results.py
